# Project1

./: CMakeLists.txt  Marcooo  README.md  marcp  param.yaml
Prj1/: CMakeLists.txt  package.xml
Prj1/cfg/: parameters.cfg
Prj1/include/Node2_class/: Node2_class.h
Prj1/launch/: Prj1.launch
Prj1/lib/: Node2_class.cpp
Prj1/msg/: v_bag.msg  v_computed.msg  wheels.msg
Prj1/src/: Node1.cpp  Node2.cpp  Node3.cpp  Node4.cpp  first_pose.cpp
Prj1/srv/: pose.srv
Regression/: OLS.m
Regression/V_x/: v_bag.txt  v_computed.txt
Regression/W_z/: v_bag.txt  v_computed.txt
bags/: first_pose.cpp
cfg/: parameters.cfg
launch/: Prj1.launch
regression/: Regression.ipynb  Untitled.m
second_project/: CMakeLists.txt
second_project/config/: ekf_loc.yaml  gmapping.launch.xml
src/: Node1.cpp  first_pose.cpp
